Overflow styles fix

--- a/app/src/main/assets/sass/displays/_main-display.sass
+++ b/app/src/main/assets/sass/displays/_main-display.sass
@@ -264,7 +264,7 @@
       background-size: cover
 .notification
   &-content
-    position: absolute
+    position: fixed
     top: 0
     left: 0
     width: 100%
@@ -272,6 +272,7 @@
     background-color: $second-accent-color
     z-index: 1000
     transition: all 0.3s
+    overflow: hidden
     &--active
       opacity: 1
       visibility: visible
@@ -280,6 +281,10 @@
       visibility: hidden
     &--dnone
       display: none
+    .container
+      max-height: 100%
+      padding: 40px 20px 40px 20px
+      overflow: auto
     &__row
       display: flex
       align-items: center
